index.js file commit

--- a/index.html
+++ b/index.html
@@ -9,19 +9,27 @@
 </head>
 <body>
   <header>
-    <nav class="w-11/12 mx-auto flex justify-between border-b-2 py-3">
+    <nav class="w-11/12 mx-auto flex justify-between border-b-2 py-5 border-[#17171720]">
       <div>
-        <img src="assets/Logo.png" alt="">
+        <img class="w-[7.5rem]" src="assets/Logo.png" alt="">
       </div>
       <div>
-        <button>Sort by view</button>
+        <button class="btn bg-[#25252520] rounded">Sort by view</button>
       </div>
       <div>
-        <button>Blogs</button>
+        <button class="bg-[#FF1F3D] text-white p-1 rounded">Blogs</button>
       </div>
 
     </nav>
   </header>
-  
+  <div id="container" class="flex justify-center gap-5 mt-3">
+    <button class="btn btn-sm">Small</button>
+    <button class="btn btn-sm">Small</button>
+    <button class="btn btn-sm">Small</button>
+    <button class="btn btn-sm">Small</button>
+
+
+  </div>
+  <script src="js/index.js"></script>
 </body>
 </html>
