dynamic btn creted

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     </nav>
   </header>
   <div id="container" class="flex justify-center gap-5 mt-3">
-    <button class="btn btn-sm">Small</button>
-    <button class="btn btn-sm">Small</button>
-    <button class="btn btn-sm">Small</button>
-    <button class="btn btn-sm">Small</button>
+    <div>
+      <button class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
+    </div>
 
 
   </div>
