video section completed

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
 
   </div>
+  <section id="video-container" class="w-11/12 mx-auto grid grid-cols-4 gap-3">
+
+  </section>
   <script src="js/index.js"></script>
 </body>
 </html>
