--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
         <img class="w-[7.5rem]" src="assets/Logo.png" alt="">
       </div>
       <div>
-        <button class="btn bg-[#25252520] rounded">Sort by view</button>
+        <label class="input">
+  <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <g
+      stroke-linejoin="round"
+      stroke-linecap="round"
+      stroke-width="2.5"
+      fill="none"
+      stroke="currentColor"
+    >
+      <circle cx="11" cy="11" r="8"></circle>
+      <path d="m21 21-4.3-4.3"></path>
+    </g>
+  </svg>
+  <input id="searchInput" class="outline-0 border-0" type="search" required placeholder="Search" />
+</label>
       </div>
       <div>
         <button class="bg-[#FF1F3D] text-white p-1 rounded">Blogs</button>
@@ -33,6 +47,10 @@
       <button onclick="loadVideos()" id="btn-all" class="btn btn-sm text-emerald-800 transition">All</button>
     </div>
 
+
+  </div>
+  <div id="loader" class="hidden text-center py-5">
+<span class="loading loading-dots loading-lg"></span>
 
   </div>
   <section id="video-container" class="w-11/12 mx-auto grid grid-cols-4 gap-3">
